--- a/7.7/index.html
+++ b/7.7/index.html
@@ -28,6 +28,41 @@
         </div>
     </header>
     <!-- End Header -->
+    <!-- Section Services -->
+    <section class="services">
+        <div class="container serv">
+            <h1>Services</h1>
+            <p>Lorem ipsum lorem ipsum lorem ipsum</p>
+        </div>
+        <div class="services_img">
+            <div class="container">
+                <div class="row">
+                    <div class="col-4 col-s-12">
+                        <button class="icon-serv shopping-basket">
+                            <i class="fa fa-shopping-basket"></i>
+                        </button>
+                        <h1>E-Commerce</h1>
+                        <p>Lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum</p>
+                    </div>
+                    <div class="col-4 col-s-12">
+                        <button class="icon-serv laptop">
+                            <i class="fa fa-laptop"></i>
+                        </button>
+                        <h1>Responsive Web</h1>
+                        <p>Lorem ipsum lorem ipsum ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem</p>
+                    </div>
+                    <div class="col-4 col-s-12">
+                        <button class="icon-serv lock">
+                            <i class="fa fa-lock"></i>
+                        </button>
+                        <h1>Web Security</h1>
+                        <p>Lorem ipsum lorem ipsum ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- End section Services -->
 </body>
 
 </html>
