Add section Portfolio and modification style

--- a/7.7/index.html
+++ b/7.7/index.html
@@ -63,6 +63,62 @@
         </div>
     </section>
     <!-- End section Services -->
+    <!-- Section Portfolio -->
+    <section class="portfolio">
+        <div class="portfolio_header container">
+            <h1>Our Portfolio</h1>
+            <p>Lorem ipsum lorem ipsum lorem ipsum</p>
+        </div>
+        <div class="items container">
+            <div class="row items_img">
+                <div class="col-4 items_content col-s-12 pic">
+                    <img src="images/item1.jpg" alt="item1">
+                    <div class="layer">
+                    </div>
+                    <h1>Ebony & Ivory</h1>
+                    <p>Branding</p>
+                </div>
+                <div class="col-4 items_content col-s-12 pic">
+                    <img src="images/item2.jpg" alt="item2">
+                    <div class="layer">
+                    </div>
+                    <h1>Smart Stationary</h1>
+                    <p>Pring Design</p>
+                </div>
+                <div class="col-4 items_content col-s-12 pic">
+                    <img src="images/item3.jpg" alt="item3">
+                    <div class="layer">
+                    </div>
+                    <h1>Clever Poster</h1>
+                    <p>Print Design</p>
+                </div>
+            </div>
+            <div class="row items_img">
+                <div class="col-4 items_content col-s-12 pic">
+                    <img src="images/item4.jpg" alt="item4">
+                    <div class="layer">
+                    </div>
+                    <h1>Vinyl Record</h1>
+                    <p>Product Mock-Up</p>
+                </div>
+                <div class="col-4 items_content col-s-12 pic">
+                    <img src="images/item5.jpg" alt="item5">
+                    <div class="layer">
+                    </div>
+                    <h1>Treehouse Template</h1>
+                    <p>Web Design</p>
+                </div>
+                <div class="col-4 items_content col-s-12 pic ">
+                    <img src="images/item6.jpg" alt="item6">
+                    <div class="layer">
+                    </div>
+                    <h1>Burned Logo</h1>
+                    <p>Branding</p>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- End section Portfolio -->
 </body>
 
 </html>
