--- a/7.7/index.html
+++ b/7.7/index.html
@@ -119,6 +119,81 @@
         </div>
     </section>
     <!-- End section Portfolio -->
+    <!-- Section About Us -->
+    <section class="about">
+        <div class="about_header">
+            <div class="container">
+                <h1>About Us</h1>
+                <p>Lorem ipsum lorem ipsum lorem ipsum</p>
+            </div>
+        </div>
+        <div class="about_main">
+            <div class="container">
+                <div class="row">
+                    <div class="col-5 about_content col-s-7">
+                        <h1 class="right">July 2010</h1>
+                        <h2 class="right_h2">Our Humble Beginnings</h2>
+                        <p class="right">Lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum</p>
+                    </div>
+                    <div class="col-2 col-s-4">
+                        <img src="images/container1.jpg">
+                        <hr>
+                    </div>
+                    <div class="col-5 col-s-1">
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-5 col-s-1">
+                    </div>
+                    <div class="col-2 col-s-4">
+                        <img src="images/container2.jpg">
+                        <hr>
+                    </div>
+                    <div class="col-5 about_content col-s-7">
+                        <h1 class="left">January 2011</h1>
+                        <h2 class="left_h2">Facing Startup Battles</h2>
+                        <p class="left">Lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum</p>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-5 col-s-7">
+                        <h1 class="right">December 2012</h1>
+                        <h2 class="right_h2">Enter The Dark Days</h2>
+                        <p class="right">Lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum</p>
+                    </div>
+                    <div class="col-2 col-s-4">
+                        <img src="images/container3.jpg">
+                        <hr>
+                    </div>
+                    <div class="col-5 col-s-1">
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-5 col-s-1">
+                    </div>
+                    <div class="col-2 col-s-4">
+                        <img src="images/container4.jpg">
+                        <hr>
+                    </div>
+                    <div class="col-5 about_content col-s-7">
+                        <h1 class="left">February 2014</h1>
+                        <h2 class="left_h2">Our Triumph</h2>
+                        <p class="left">Lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum</p>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-5">
+                    </div>
+                    <div class="col-2">
+                        <img src="images/container5.png">
+                    </div>
+                    <div class="col-5">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- End section About Us -->
 </body>
 
 </html>
