Add section Team and modification style

--- a/7.7/index.html
+++ b/7.7/index.html
@@ -194,6 +194,76 @@
         </div>
     </section>
     <!-- End section About Us -->
+    <!-- Section Team -->
+    <section class="team">
+        <div class="team_header">
+            <div class="container">
+                <h1>Our Amazing Team</h1>
+                <p>Lorem ipsum lorem ipsum lorem ipsum</p>
+            </div>
+        </div>
+        <div class="team_content">
+            <div class="container">
+                <div class="row">
+                    <div class="col-4 col-s-12 team_img">
+                        <img src="images/team1.jpg" alt="team1">
+                        <h1>Kimberly Thompson</h1>
+                        <p>Marketer</p>
+                        <div class="social">
+                            <div class="row">
+                                <button class="icon-btn twitter">
+                                    <i class="fa fa-twitter"></i>
+                                </button>
+                                <button class="icon-btn facebook">
+                                    <i class="fa fa-facebook"></i>
+                                </button>
+                                <button class="icon-btn pinterest">
+                                    <i class="fa fa-pinterest"></i>
+                                </button>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-4 col-s-12 team_img">
+                        <img src="images/team2.jpg" alt="team2">
+                        <h1>Rico Massimo</h1>
+                        <p>Coder</p>
+                        <div class="social">
+                            <div class="row">
+                                <button class="icon-btn twitter">
+                                    <i class="fa fa-twitter"></i>
+                                </button>
+                                <button class="icon-btn facebook">
+                                    <i class="fa fa-facebook"></i>
+                                </button>
+                                <button class="icon-btn google-plus">
+                                    <i class="fa fa-google-plus"></i>
+                                </button>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-4 col-s-12 team_img">
+                        <img src="images/team3.jpg" alt="team3">
+                        <h1>Uku Mason</h1>
+                        <p>Graphic Designer</p>
+                        <div class="social">
+                            <div class="row">
+                                <button class="icon-btn facebook">
+                                    <i class="fa fa-facebook"></i>
+                                </button>
+                                <button class="icon-btn pinterest">
+                                    <i class="fa fa-pinterest"></i>
+                                </button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="promotion_text">
+                    <p>Lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum</p>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- End section Team -->
 </body>
 
 </html>
