Add section Promotion, Contact and modification style

--- a/7.7/index.html
+++ b/7.7/index.html
@@ -264,6 +264,55 @@
         </div>
     </section>
     <!-- End section Team -->
+    <!-- Section Promotion -->
+    <section class="promotion">
+        <div class="container">
+            <div class="row">
+                <div class="col-3 col-s-12">
+                    <img src="images/logo_envato.png" alt="Logo envato">
+                </div>
+                <div class="col-3 col-s-12">
+                    <img src="images/logo_wordpress.png" alt="Logo wordpress">
+                </div>
+                <div class="col-3 col-s-12">
+                    <img src="images/logo_tuts.png" alt="Logo tuts">
+                </div>
+                <div class="col-3 col-s-12">
+                    <img src="images/logo_microlancer.png" alt="Logo microlancer">
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- End section Promotion -->
+    <!-- Section Contact -->
+    <section class="contact">
+        <div class="container">
+            <h1>Contact us</h1>
+            <p>Lorem ipsum lorem ipsum</p>
+        </div>
+        <div class="container">
+            <div class="row">
+                <div class="col-6 col-s-12">
+                    <div class="row">
+                        <input type="text" placeholder="YOUR NAME *">
+                    </div>
+                    <div class="row">
+                        <input type="text" placeholder="YOUR E-MAIL *">
+                    </div>
+                    <div class="row">
+                        <input type="text" placeholder="SUBJECT">
+                    </div>
+                </div>
+                <div class="col-6 col-s-12">
+                    <div class="row">
+                        <textarea placeholder="YOUR MESSAGE *"></textarea>
+                    </div>
+                </div>
+            </div>
+            <div class="button1">Send Message</div>
+        </div>
+    </section>
+    <!-- End section Contact -->
 </body>
 
 </html>
