Add section Footer and modification style

--- a/7.7/index.html
+++ b/7.7/index.html
@@ -313,6 +313,35 @@
         </div>
     </section>
     <!-- End section Contact -->
+    <!-- Section Footer -->
+    <section class="footer">
+        <div class="container">
+            <div class="row">
+                <div class="col-4 col-s-6">
+                    <p>Copyright 2018 FreebiesXpress.com</p>
+                </div>
+                <div class="col-4 col-s-6">
+                    <div class="social">
+                        <button class="icon-btn twitter">
+                            <i class="fa fa-twitter"></i>
+                        </button>
+                        <button class="icon-btn facebook">
+                            <i class="fa fa-facebook"></i>
+                        </button>
+                        <button class="icon-btn pinterest">
+                            <i class="fa fa-pinterest"></i>
+                        </button>
+                        <button class="icon-btn google-plus">
+                            <i class="fa fa-google-plus"></i>
+                        </button>
+                    </div>
+                </div>
+                <div class="col-4">
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- End Section Footer -->
 </body>
 
 </html>
